export const snapshot = {};

snapshot[`build a site with liquid 1`] = `4`;

snapshot[`build a site with liquid 2`] = `
{
  formats: [
    {
      includesPath: undefined,
      key: ".tmpl.ts",
      pageType: "page",
    },
    {
      includesPath: undefined,
      key: ".tmpl.js",
      pageType: "page",
    },
    {
      includesPath: undefined,
      key: ".tmpl.json",
      pageType: "page",
    },
    {
      includesPath: undefined,
      key: ".json",
      pageType: undefined,
    },
    {
      includesPath: undefined,
      key: ".md",
      pageType: "page",
    },
    {
      includesPath: undefined,
      key: ".js",
      pageType: undefined,
    },
    {
      includesPath: undefined,
      key: ".ts",
      pageType: undefined,
    },
    {
      includesPath: "_includes",
      key: ".njk",
      pageType: "page",
    },
    {
      includesPath: undefined,
      key: ".yaml",
      pageType: "page",
    },
    {
      includesPath: undefined,
      key: ".yml",
      pageType: "page",
    },
    {
      includesPath: "_includes",
      key: ".liquid",
      pageType: "page",
    },
  ],
}
`;

snapshot[`build a site with liquid 3`] = `
{
  content: '
["red","green","blue"]
',
  data: {
    colors: [
      "red",
      "green",
      "blue",
    ],
    content: "
{{ colors | json }}
",
    date: 1970-01-01T00:00:00.000Z,
    layout: null,
    paginate: [GeneratorFunction: paginate],
    search: Search {},
    tags: [
    ],
    url: "/data.json",
  },
  dest: {
    ext: ".json",
    path: "/data",
  },
  src: {
    ext: ".liquid",
    path: "/data.json",
  },
}
`;

snapshot[`build a site with liquid 4`] = `
{
  content: '<!DOCTYPE html>

<html lang="en">
  <head>
    <meta charset="utf-8">
    <title>Hello World</title>
  </head>
  <body>
    <main>
<h1>Hello World</h1>
</main>
  </body>
</html>
',
  data: {
    content: "
<h1>{{ title }}</h1>
",
    date: 1970-01-01T00:00:00.000Z,
    paginate: [GeneratorFunction: paginate],
    search: Search {},
    tags: [
    ],
    title: "Hello World",
    url: "/",
  },
  dest: {
    ext: ".html",
    path: "/index",
  },
  src: {
    ext: ".liquid",
    path: "/index",
  },
}
`;

snapshot[`build a site with liquid 5`] = `
{
  content: '<!DOCTYPE html>

<html lang="en">
  <head>
    <meta charset="utf-8">
    <title>liquid filter example</title>
  </head>
  <body>
    <main><h1>LIQUID FILTER EXAMPLE</h1></main>
  </body>
</html>
',
  data: {
    content: undefined,
    date: 1970-01-01T00:00:00.000Z,
    paginate: [GeneratorFunction: paginate],
    search: Search {},
    tags: [
    ],
    title: "liquid filter example",
    url: "/liquid-filter/",
  },
  dest: {
    ext: ".html",
    path: "/liquid-filter/index",
  },
  src: {
    ext: ".tmpl.js",
    path: "/liquid-filter",
  },
}
`;

snapshot[`build a site with liquid 6`] = `
{
  content: '<!DOCTYPE html>

<html lang="en">
  <head>
    <meta charset="utf-8">
    <title>The title</title>
  </head>
  <body>
    <main><p><strong>THE TITLE</strong></p>
<p><strong>THE TITLE</strong></p>
<p><strong>THE TITLE</strong></p>
<p><strong>THE TITLE</strong></p>
<div>hello (async)</div>

<ul>
  <li>This is a partial</li>
  <li>async helper in a partial (async)</li>
</ul>
<ul>
  <li>This is a partial</li>
  <li>async helper in a partial (async)</li>
</ul>
</main>
  </body>
</html>
',
  data: {
    content: '<p>{% upperCase title %}</p>
<p>{% upperCase "The title" %}</p>
<p>{% upperCaseAsync title %}</p>
<p>{% upperCaseAsync "The title" %}</p>
<div>{{ "hello" | returnAsync }}</div>

{% include "partial.liquid" %}
{% include "./_includes/partial.liquid" %}
',
    date: 1970-01-01T00:00:00.000Z,
    paginate: [GeneratorFunction: paginate],
    search: Search {},
    tags: [
    ],
    title: "The title",
    url: "/with-helpers/",
  },
  dest: {
    ext: ".html",
    path: "/with-helpers/index",
  },
  src: {
    ext: ".liquid",
    path: "/with-helpers",
  },
}
`;
